regression/goto-bmc/invalid-files/not-goto-no-header.goto
This is not a goto binary. A header would be required to pass the
`is_goto_binary` check.
